--- a/ET49_DibujaSkia/ET49_DibujaSkia.UWP/ET49_DibujaSkia.UWP.csproj
+++ b/ET49_DibujaSkia/ET49_DibujaSkia.UWP/ET49_DibujaSkia.UWP.csproj
@@ -143,8 +143,14 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="SkiaSharp">
+      <Version>1.60.0</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.Views.Forms">
+      <Version>1.60.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1"/>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ET49_DibujaSkia\ET49_DibujaSkia.csproj">
