--- a/ET49_DibujaSkia/ET49_DibujaSkia.iOS/ET49_DibujaSkia.iOS.csproj
+++ b/ET49_DibujaSkia/ET49_DibujaSkia.iOS/ET49_DibujaSkia.iOS.csproj
@@ -147,6 +147,12 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="SkiaSharp">
+      <Version>1.60.0</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.Views.Forms">
+      <Version>1.60.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
